Fix rbac anonymious rbac issue

--- a/artifacts/manifests/301_anonymous_rbac.yaml
+++ b/artifacts/manifests/301_anonymous_rbac.yaml
@@ -6,7 +6,7 @@ rules:
   - apiGroups:
       - "admission.setsriovdefaultpodannotation.openshift.io"
     resources:
-      - "setsriovdefaultstopods"
+      - "setsriovdefaultpodannotations"
     verbs:
       - create
       - get
